k8s/gateway-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: payment-orch
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: pratham12102001/gateway:v1-0606261231
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "512Mi"
        ports:
        - containerPort: 5003
---

apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: payment-orch
spec:
  selector:
    app: gateway
  ports:
  - port: 5003
    targetPort: 5003
