k8s/orchestrator-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator-deployment
  namespace: payment-orch
spec:
  selector:
    matchLabels:
      app: orchestrator
  template:
    metadata:
      labels:
        app: orchestrator
    spec:
      containers:
      - name: orchestrator
        image: pratham12102001/orchestrator:v1-0606261231
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "512Mi"
        ports:
        - containerPort: 5001
---

apiVersion: v1
kind: Service
metadata:
  name: orchestrator
  namespace: payment-orch
spec:
  selector:
    app: orchestrator
  ports:
  - port: 5001
    targetPort: 5001
