k8s/redis-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server-deployment
  namespace: payment-orch
spec:
  selector:
    matchLabels:
      app: redis-server
  template:
    metadata:
      labels:
        app: redis-server
    spec:
      containers:
      - name: redis-server
        image: redis:latest
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "512Mi"
        ports:
        - containerPort: 5004
---


apiVersion: v1
kind: Service
metadata:
  name: redis-server
  namespace: payment-orch
spec:
  selector:
    app: redis-server
  ports:
  - port: 6379
    targetPort: 6379
