k8s/router-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  router-deployment
  namespace: payment-orch
spec:
  selector:
    matchLabels:
      app:  router
  template:
    metadata:
      labels:
        app:  router
    spec:
      containers:
      - name:  router
        image: pratham12102001/router:v1-0606261231
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "512Mi"
        ports:
        - containerPort: 5005
---

apiVersion: v1
kind: Service
metadata:
  name:  router
  namespace: payment-orch
spec:
  selector:
    app:  router
  ports:
  - port: 5005
    targetPort: 5005
