k8s/serviceregistory-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-registory-deployment
  namespace: payment-orch
spec:
  selector:
    matchLabels:
      app: service-registory
  replicas: 1
  template:
    metadata:
      labels:
        app: service-registory
    spec:
      containers:
      - name: orch-service-reg
        image: pratham12102001/orch-service-reg:v1-0606261231
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "512Mi"
        ports:
        - containerPort: 5004
---

apiVersion: v1
kind: Service
metadata:
  name: serviceregistory
  namespace: payment-orch
spec:
  selector:
    app: service-registory
  ports:
  - port: 5004
    targetPort: 5004
    protocol: TCP
