k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-orch-ingress
  namespace: payment-orch
  labels:
    app: payment-orch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: serviceregistory
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: serviceregistory
            port: 
              number: 5004
